<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="appUpdatesVM" type="com.tejaswisapplication.app.modules.appupdates.data.viewmodel.AppUpdatesVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearAppUpdates"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIPhoneXorne"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageTime"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_28pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_time}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_time"/>
                <LinearLayout android:id="@+id/linearRowmobilesignal"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_284pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.7"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageMobileSignal"
                        android:layout_height="@dimen/_10pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_17pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_mobilesignal"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_mobilesignal"/>
                    <ImageView android:id="@+id/imageWifi"
                        android:layout_height="@dimen/_10pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_width="@dimen/_15pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_wifi"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_wifi"/>
                    <ProgressBar
                        android:id="@+id/progressBarGroupEighteen"
                        android:indeterminate="false"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_weight="0.4"
                        android:layout_width="0dp" android:max="100"
                        android:minHeight="@dimen/_11pxv"
                        android:progress="82"
                        android:progressDrawable="@drawable/layer_list_border_black_900_7a_radius_3" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
                    <ImageView android:id="@+id/imageCombinedShape"
                        android:layout_height="@dimen/_4pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_1pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_combinedshape"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_combinedshape"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowarrowleft"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_12pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAppUpdates"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_107pxh"
                android:layout_weight="0.92" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{appUpdatesVM.appUpdatesModel.txtAppUpdates}"
                style="@style/txtGilroysemibold24" tools:text="@string/lbl_app_updates"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowappstoreicon"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageButton
                android:background="@drawable/rectangle_gradient_s_cyan_a200_e_indigo_a700"
                android:id="@+id/btnAppStoreIcon"
                android:layout_height="@dimen/_30pxh"
                android:layout_width="@dimen/_30pxh"
                android:paddingHorizontal="@dimen/_1pxh"
                android:paddingVertical="@dimen/_1pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_appstoreicon" tools:ignore="ContentDescription"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAppStore"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_weight="0.71" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{appUpdatesVM.appUpdatesModel.txtAppStore}"
                style="@style/txtGilroyregular16" tools:text="@string/lbl_app_store"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowfilesize"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtFilesize"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_weight="0.89" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{appUpdatesVM.appUpdatesModel.txtFilesize}"
                style="@style/txtGilroyregular16" tools:text="@string/msg_27_files_upload"/>
            <FrameLayout android:background="@color/bluegray_101"
                android:id="@+id/frameRefresh"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_180pxh"
                android:layout_weight="0.11" android:layout_width="0dp"/>
        </LinearLayout>
        <View android:background="@color/bluegray_101"
            android:id="@+id/lineLine"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_27pxv" android:layout_width="@dimen/_396pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtStorageDateRe"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtStorageDateRe}"
            style="@style/txtGilroymedium16" tools:text="@string/msg_storage_date_re"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesizeOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesizeOne}"
            style="@style/txtGilroyregular14" tools:text="@string/lbl_250_mb"/>
        <View android:background="@color/bluegray_101"
            android:id="@+id/lineLineOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_396pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesManagemen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesManagemen}"
            style="@style/txtGilroymedium16" tools:text="@string/msg_files_managemen"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesizeTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesizeTwo}"
            style="@style/txtGilroyregular14" tools:text="@string/lbl_230_mb"/>
        <View android:background="@color/bluegray_101"
            android:id="@+id/lineLineTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_396pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGoogleDirector"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtGoogleDirector}"
            style="@style/txtGilroymedium16" tools:text="@string/msg_google_director"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesizeThree"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesizeThree}"
            style="@style/txtGilroyregular14" tools:text="@string/lbl_230_mb"/>
        <View android:background="@color/bluegray_101"
            android:id="@+id/lineLineThree"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_396pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDocumentFiles"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtDocumentFiles}"
            style="@style/txtGilroymedium16" tools:text="@string/lbl_document_files"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesizeFour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesizeFour}"
            style="@style/txtGilroyregular14" tools:text="@string/lbl_230_mb"/>
        <View android:background="@color/bluegray_101"
            android:id="@+id/lineLineFour"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_396pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesManagemenOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesManagemenOne}"
            style="@style/txtGilroymedium16" tools:text="@string/msg_files_managemen"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesizeFive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesizeFive}"
            style="@style/txtGilroyregular14" tools:text="@string/lbl_150_mb"/>
        <View android:background="@color/bluegray_101"
            android:id="@+id/lineLineFive"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_396pxh"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfiguration"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtConfiguration}"
            style="@style/txtGilroymedium16" tools:text="@string/lbl_configuration"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtFilesizeSix"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@{appUpdatesVM.appUpdatesModel.txtFilesizeSix}"
            style="@style/txtGilroyregular14" tools:text="@string/lbl_100_mb"/>
    </LinearLayout>
</layout>
